--- a/templates/info_manage.html
+++ b/templates/info_manage.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>智创2502班·学生管理系统</title>
+    <title>智创2502班·学生信息</title>
     <link rel="stylesheet" type="text/css" href="../static/style_0.css">
 </head>
 <body>
@@ -14,18 +14,18 @@
 <!--            </ul>-->
 <!--        </div>-->
 
-        <h1>智创2502班·学生管理系统</h1>
+        <h1>智创2502班·学生信息</h1>
 
         <div class="instructions">
             <h3>使用说明</h3>
-            <p>1. 输入姓名（和学号）</p>
-            <p>2. 在复选框中选择需要更新的字段，并输入更新数据</p>
-            <p>3. 点击"更新"按钮可以将数据更新至数据库</p>
+            <p>1. 输入姓名/学号/（空）</p>
+            <p>2. 在复选框中选择需要查询的字段</p>
+            <p>3. 点击"查询"按钮即可查询需要的信息</p>
         </div>
 
         <div class="card">
             <form method="post" action="/">
-                <h2>更新/查询信息</h2>
+                <h2>查询信息</h2>
                 <div class="form-group">
                     <label for="name">学生姓名：</label>
                     <input type="text" id="name" name="name" placeholder="请输入学生姓名">
@@ -39,24 +39,24 @@
                     <h3>选择字段：</h3>
                     {% for row in fields %}
                         <label class="checkbox-container">{{row.1}}
-                            <input type="checkbox" name="field" value={{row.0}}>
+                            <input type="checkbox" name="field" value={{row.0}} {{row.2}}>
                             <span class="checkmark"></span>
                         </label>
                     {% endfor %}
-                    <div class="form-group">
-                        <label class="checkbox-container">其他：
-                            <input type="checkbox" name="field" value="other">
-                            <span class="checkmark"></span>
-                        </label>
-                        <input type="text" name="other_field" placeholder="请输入新的字段名">
-                    </div>
-                    <div class="form-group">
-                        <label for="field_value">值：</label>
-                        <input type="text" id="field_value" name="field_value" placeholder="请输入需要更新的值">
-                    </div>
+<!--                    <div class="form-group">-->
+<!--                        <label class="checkbox-container">其他：-->
+<!--                            <input type="checkbox" name="field" value="other">-->
+<!--                            <span class="checkmark"></span>-->
+<!--                        </label>-->
+<!--                        <input type="text" name="other_field" placeholder="请输入新的字段名">-->
+<!--                    </div>-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="field_value">值：</label>-->
+<!--                        <input type="text" id="field_value" name="field_value" placeholder="请输入需要更新的值">-->
+<!--                    </div>-->
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary" name="method" value="update">更新</button>
+<!--                    <button class="btn btn-primary" name="method" value="update">更新</button>-->
                     <button class="btn btn-primary" name="method" value="select">查询</button>
                 </div>
             </form>
