修复了条件查询为空时报错的bug

--- a/templates/info_manage.html
+++ b/templates/info_manage.html
@@ -45,7 +45,8 @@
                         {% endfor %}
                     </select>
                     <input type="text" id="filed_to_select_value"
-                           name="filed_to_select_value" value="{{ filed_to_select_value }}">
+                           name="filed_to_select_value" value="{{ filed_to_select_value }}"
+                           placeholder="请输入想查询的值">
                 </div>
                 <hr>
                 <div class="form-group">
