1. 优化了代码逻辑，将重复代码提前或构成函数。 2. 修改了部分变量的命名。
一、“信息管理”页面相关更新
1. 通过用超链接包裹按钮，实现了“信息管理”页面到任意学生的详细信息页面的跳转。
2. 更改了复选框的默认选中逻辑，并且将“姓名”和“学号”选项锁死。

二、“学生详细信息”页面相关更新
1. 完成了“学生详细信息”页面。
2. 完成了“学生详细信息”视图函数，使之具有以下功能：
（1）查询该学生的详细信息，并以表单输入框的形式呈现。
（2）默认为“只读”状态，防止意外修改。并在不同情况下分别设置了button，以解锁/锁定。
（3）解锁后，可直接修改学生信息，并通过点击“更新”button以提交更新。
（4）点击“返回上一页”button，返回“信息管理”页面。

三、README.md文件的更新
1. 添加了较为详尽的数据结构说明。

--- a/static/style_0.css
+++ b/static/style_0.css
@@ -144,7 +144,8 @@ a:hover {
 }
 
 label {
-    display: block;
+    display: inline;
+    /*min-width: 300px;*/
     margin-bottom: 8px;
     font-weight: 500;
     color: var(--dark);
@@ -157,6 +158,7 @@ input[type="number"],
 textarea,
 select {
     width: 100%;
+    max-width: 300px;
     padding: 15px;
     border: 2px solid #ddd;
     border-radius: var(--border-radius);
