--- a/templates/select.html
+++ b/templates/select.html
@@ -21,6 +21,7 @@
                 <p>3. 点击"更新"按钮可以将数据更新至数据库</p>
             </div>
 
+
             <div class="checkbox-list" id="checkboxList">
                 <div class="checkbox-item">
                     <input type="checkbox" id="item1" value="项目一">
@@ -67,6 +68,7 @@
         </div>
     </div>
 
+    <!-- 对复选框以选择顺序进行排序 -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const checkboxes = document.querySelectorAll('input[type="checkbox"]');
