--- a/app/blueprints/info_management/templates/authenticate_one.html
+++ b/app/blueprints/info_management/templates/authenticate_one.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>确认删除</title>
-    <link rel="stylesheet" type="text/css" href="/static/style_0.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/basic_style.css">
 </head>
 <body>
     <div class="card">
         <h3>警告！！！</h3>
-        <p>你确定要删除这些学生的信息吗？</p>
+        <p>你确定要删除这名学生的信息吗？</p>
 
-        <a href="/info_management" target="_self" title="">
+        <a href="/info_management/student_info/{{student_id}}/" target="_self" title="">
             <button class="btn btn-primary" type="button">取消</button>
         </a>
-        <a href="/info_management/1" target="_self" title="">
+        <a href="/info_management/student_info/{{student_id}}/1/" target="_self" title="">
             <button class="btn btn-danger" type="button">确定</button>
         </a>
 
