--- a/app/blueprints/info_management/templates/student_info.html
+++ b/app/blueprints/info_management/templates/student_info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{fields_values.0.2}}的详细信息</title>
-    <link rel="stylesheet" type="text/css" href="/static/style_0.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/basic_style.css">
 </head>
 <body>
     <!-- 返回上一个页面 -->
