一、主页 1. 设计了主页，实现了导航、跳转至登录/注册、展示用户简略信息、跳转至服务等功能。
二、认证系统
1. 完成了 RBAC 设计，构建了关联的表，并完善了初始化操作。
2. 实现了注册、登录功能。
3. 设计了“用户详细信息”页面，提供个人对自身账号信息的查看、修改，并实现了注销功能。
4. 设计了“用户管理”界面，简便地实现了修改用户身份、删除指定用户的功能。
5. 利用自定义装饰器，实现了用户登录验证、身份/权限验证功能。

三、学生信息管理系统
1. 添加了导航栏。
2. 实现了文件导出功能。

四、其他
1. 将常用函数提到“function.py”文件，可直接引用。
2. 找到了一些合适的图标，加入到网页中。
3.

--- a/app/blueprints/auth/templates/register.html
+++ b/app/blueprints/auth/templates/register.html
@@ -2,24 +2,25 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>登录</title>
+    <title>注册</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_auth.css') }}">
 </head>
 <body>
     <div class="container">
-        <div class="heading">登录</div>
+        <div class="heading">注册新用户</div>
 
         <!-- 输入学号、密码 -->
-        <form method="post" action="/auth/login/" class="form">
-            <input class="input" type="text" name="student_id" id="student_id" placeholder="学号" required>
-            <input class="input" type="password" name="password" id="password" placeholder="密码" required>
-            <span class="forgot-password"><a href="#">忘记密码？</a></span>
-            <span class="forgot-password"><a href="/auth/register/">没有账户？点击以创建新账户。</a></span>
-            <input class="login-button" type="submit" value="登录">
+        <form method="post" action="/auth/register/" class="form">
+            <input required class="input" type="text" name="name" id="name" placeholder="真实姓名">
+            <input required class="input" type="number" name="student_id" id="student_id" placeholder="学号">
+<!--            <input required class="input" type="text" name="telephone" id="telephone" placeholder="手机">-->
+            <input required class="input" type="password" name="password" id="password" placeholder="密码">
+            <input class="login-button" type="submit" value="注册">
         </form>
     </div>
 </body>
 </html>
+
 
 <!--    <div class="social-account-container">-->
 <!--        <span class="title">Or Sign in with</span>-->
