--- a/app/blueprints/info_management/templates/info_management.html
+++ b/app/blueprints/info_management/templates/info_management.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>智创2502班·学生信息</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/basic_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_info_management.css') }}">
 </head>
 <body>
     <div class="container">
-<!--        <div class="navbar">-->
-<!--            <div class="nav-brand">信息管理系统</div>-->
-<!--            <ul class="nav-links">-->
-<!--                <li><a href="#">首页</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
+        <!-- 导航页面 -->
+        <div class="navbar">
+            <div class="nav-brand">信息管理系统</div>
+            <ul class="nav-links">
+                <li><a href="/home/">首页</a></li>
+            </ul>
+        </div>
 
         <h1>智创2502班·学生信息</h1>
 
