--- a/app/blueprints/info_management/templates/auth_delete.html
+++ b/app/blueprints/info_management/templates/auth_delete.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>确认删除</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/basic_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_info_management.css') }}">
 </head>
 <body>
     <div class="card">
