--- a/app/blueprints/info_management/templates/insert_field.html
+++ b/app/blueprints/info_management/templates/insert_field.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>新增字段</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/basic_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_info_management.css') }}">
 </head>
 <body>
     <!-- 返回查询页面 -->
