1. 完善了“修改密码”的展示 2. 优化了login、register、change_password这三个页面的导航栏布局。

--- a/app/blueprints/auth/templates/login.html
+++ b/app/blueprints/auth/templates/login.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_auth.css') }}">
 </head>
 <body>
-    <div class="container">
-        <!-- 导航页面 -->
-        <div class="navbar">
-            <div class="nav-brand"></div>
-            <ul class="nav-links">
-                <li><a href="/home/">首页</a></li>
-            </ul>
-        </div>
+    <!-- 导航页面 -->
+    <div class="navbar">
+        <div class="nav-brand">登录</div>
+        <ul class="nav-links">
+            <li><a href="/home/">首页</a></li>
+        </ul>
+    </div>
 
+    <div class="container">
         <div class="heading">登录</div>
 
         <!-- 输入学号、密码 -->
