--- a/app/blueprints/auth/templates/register.html
+++ b/app/blueprints/auth/templates/register.html
@@ -8,15 +8,14 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_auth.css') }}">
 </head>
 <body>
+    <!-- 导航页面 -->
+    <div class="navbar">
+        <div class="nav-brand">注册新用户</div>
+        <ul class="nav-links">
+            <li><a href="/home/">首页</a></li>
+        </ul>
+    </div>
     <div class="container">
-        <!-- 导航页面 -->
-        <div class="navbar">
-            <div class="nav-brand"></div>
-            <ul class="nav-links">
-                <li><a href="/home/">首页</a></li>
-            </ul>
-        </div>
-
         <div class="heading">注册新用户</div>
 
         <!-- 输入学号、密码 -->
