--- a/app/blueprints/auth/templates/change_password.html
+++ b/app/blueprints/auth/templates/change_password.html
@@ -8,21 +8,26 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style_auth.css') }}">
 </head>
 <body>
-    <div class="container">
-        <!-- 导航页面 -->
-        <div class="navbar">
-            <div class="nav-brand"></div>
-            <ul class="nav-links">
-                <li><a href="/home/">首页</a></li>
-            </ul>
-        </div>
+    <!-- 导航页面 -->
+    <div class="navbar">
+        <div class="nav-brand">修改密码</div>
+        <ul class="nav-links">
+            <li><a href="/home/">首页</a></li>
+        </ul>
+    </div>
 
+    <div class="container">
         <div class="heading">修改密码</div>
 
         <!-- 输入学号、密码 -->
         <form method="post" action="/auth/change_password/" class="form">
-            <input required class="input" type="number" name="student_id" id="student_id"
-                   placeholder="学号" value="{{ student_id }}">
+            {% if whether_hidden == 1 %}
+                <input required class="input" type="number" name="student_id" id="student_id"
+                       placeholder="学号" value="{{ student_id }}" hidden="hidden">
+            {% else %}
+                <input required class="input" type="number" name="student_id" id="student_id"
+                       placeholder="学号" value="{{ student_id }}">
+            {% endif %}
             <input required class="input" type="password" name="new_password" id="new_password"
                    placeholder="新密码" value="{{ new_password }}">
             <input required class="input" type="password" name="new_password_again" id="new_password_again"
