扩大点击区

--- a/app/blueprints/main/templates/home.html
+++ b/app/blueprints/main/templates/home.html
@@ -81,13 +81,15 @@
             
             <div class="services">
                 <div class="service-card">
-                    <div class="service-icon">
-<!--                        <i class="fas fa-cloud"></i>-->
-                        <img src="{{ url_for('static', filename='images/icon_info_management.png') }}" alt="图标"
-                             width="60" height="60">
-                    </div>
-                    <a href="/info_management/"><h3>班级成员信息管理</h3></a>
-                    <p>提供安全可靠的公有云、私有云及混合云解决方案，帮助企业实现灵活扩展和成本优化。</p>
+                    <a href="/info_management/">
+                        <div class="service-icon">
+    <!--                        <i class="fas fa-cloud"></i>-->
+                            <img src="{{ url_for('static', filename='images/icon_info_management.png') }}" alt="图标"
+                                 width="60" height="60">
+                        </div>
+                        <h3>班级成员信息管理</h3>
+                        <p>提供安全可靠的公有云、私有云及混合云解决方案，帮助企业实现灵活扩展和成本优化。</p>
+                    </a>
                 </div>
                 
                 <div class="service-card">
